--- a/jme3/.classpath
+++ b/jme3/.classpath
@@ -146,5 +146,6 @@
 	<classpathentry kind="lib" path="lib/swing-layout/swing-layout-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/swingext/swing-layout-1.0.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/cortado-modified-0.82.jar"/>
 	<classpathentry kind="output" path="build/terrain"/>
 </classpath>
