--- a/jme3/.project
+++ b/jme3/.project
@@ -10,8 +10,15 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>InCode.inCodeBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.evolizer.core.natures.evolizerNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>InCode.inCodeNature</nature>
 	</natures>
 </projectDescription>
