--- a/jme3/.classpath
+++ b/jme3/.classpath
@@ -149,7 +149,7 @@
 	<classpathentry kind="lib" path="lib/android/android.jar"/>
 	<classpathentry kind="lib" path="lib/jmockit/jmockit-coverage.jar"/>
 	<classpathentry kind="lib" path="lib/jmockit/jmockit.jar"/>
-	<classpathentry kind="lib" path="/Users/Joseph/Documents/Software Reengineering/workspace/jme3Test/lib/easymock-2.5.1.jar"/>
-	<classpathentry kind="lib" path="/Users/Joseph/Documents/Software Reengineering/workspace/jme3Test/lib/easymockclassextension-2.4.jar"/>
+	<classpathentry kind="lib" path="/jme3Test/lib/easymock-2.5.1.jar"/>
+	<classpathentry kind="lib" path="/jme3Test/lib/easymockclassextension-2.4.jar"/>
 	<classpathentry kind="output" path="build/terrain"/>
 </classpath>
